--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1914,7 +1914,7 @@ input, select, textarea {
 		input[type="button"].primary,
 		button.primary,
 		.button.primary {
-			background-color: #ffffff;
+		/* 	background-color: #ffffff; */
 			color: #312450 !important;
 		}
 
@@ -3507,7 +3507,7 @@ input, select, textarea {
 
 	#sidebar {
 		padding: 2.5em 2.5em 0.5em 2.5em ;
-		background: #312450;
+		background: rgba(0,0,0,0.9);
 		cursor: default;
 		height: 100vh;
 		left: 0;
@@ -3857,10 +3857,16 @@ input, select, textarea {
 
 	#intro {
 		background-attachment: fixed;
-		background-image: url("images/intro.svg");
-		background-position: top right;
+		background-image: url("images/truck.jpg");
+		background-position: 50% 100%;
+		position:right;
+		height:100vh;
+		width:100%;
 		background-repeat: no-repeat;
-		background-size: 100% 100%;
+		background-size:cover;
+		z-index:-10;
+		filter:blur(5px);
+		-webkit-filter:blur(5px);
 	}
 
 		#intro p {
