--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3217,6 +3217,7 @@ input, select, textarea {
 			width: 75em;
 		}
 
+
 			@media screen and (max-width: 1680px) {
 
 				.wrapper > .inner {
@@ -3876,18 +3877,32 @@ input, select, textarea {
 /* Intro */
 
 	#intro {
-		background-attachment: fixed;
-		background-image: url("images/truck.jpg");
-		background-position: 50% 100%;
-		position:right;
-		height:100vh;
-		width:100%;
-		background-repeat: no-repeat;
-		background-size:cover;
-		z-index:-10;
-		filter:blur(5px);
-		-webkit-filter:blur(5px);
+background-attachment: fixed;
+background-image: url("images/truck.jpg");
+background-position: 100% 100%;
+position:right;
+height:100%;
+width:100%;
+background-repeat: no-repeat;
+background-size:cover;
+z-index:-10;
+/* filter:blur(5px);
+-webkit-filter:blur(5px); */
 	}
+
+
+.logo{
+  position: absolute;
+  z-index: 1;
+  top: 10%;
+  left: 50%;
+  margin-top: -210px;
+  margin-left: -280px;
+  margin-bottom: -10px
+  width: 1500px;
+  height: 3500px;
+
+		}
 
 		#intro p {
 			font-size: 1.25em;
